trunk/Archive2/63/23f2d91ae2a850/output
main.cpp:24:2: error: #else without #if
 #else
  ^
main.cpp:26:2: error: #endif without #if
 #endif
  ^
main.cpp: In function ‘int main()’:
main.cpp:22:1: error: ‘ierd’ was not declared in this scope
 ierd
 ^
main.cpp:23:5: error: expected ‘;’ before ‘std’
     std::cout << "VAR1 and VAR2 not defined" << std::endl;
     ^
